--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   gap: ^3.0.1
   smooth_page_indicator: ^1.1.0
   animated_bottom_navigation_bar: ^1.3.3
+  shared_preferences: ^2.3.1
 
 dev_dependencies:
   flutter_test:
